feat: implemented Select Location for MQTT Topic
